Storyboard setup & Assets

--- a/RobertsDVTWeatherTakeHome/Base.lproj/Main.storyboard
+++ b/RobertsDVTWeatherTakeHome/Base.lproj/Main.storyboard
@@ -1,24 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eTt-ZN-cK4">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Bob's Weather Central-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RobertsDVTWeatherTakeHome" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Bob's Weather Central" id="cq6-KR-Row"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1858" y="-527"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="7ys-PV-U07">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hoA-PM-ezG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="house.circle.fill" catalog="system" id="CrB-bH-39t"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="5IS-qb-RIn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="standardAppearance" backgroundEffect="systemThinMaterial"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ZJ8-py-5Tc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vM3-4d-57A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="949" y="-527"/>
+        </scene>
+        <!--Weather-->
+        <scene sceneID="Met-UO-Qyt">
+            <objects>
+                <viewController title="Weather" id="Qaz-xB-W6T" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TtV-p4-xdN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="l7M-hW-CBq"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Weather" image="cloud.bolt.rain" catalog="system" id="yF8-1g-uQo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eWx-PK-uxv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="948" y="183"/>
+        </scene>
+        <!--Favourites-->
+        <scene sceneID="mcC-DA-xoO">
+            <objects>
+                <viewController title="Favourites" id="NvZ-qc-bMg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="A5M-5a-QNV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ybX-d3-JcZ"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Favourites" image="star.circle" catalog="system" id="lXZ-r6-mQn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6QS-Mq-pcS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="948" y="913"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="YLZ-0Y-7IH">
+            <objects>
+                <viewController title="Search" id="oXA-6h-TCr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4e6-uH-bbP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="OcM-wN-Tka"/>
+                        <color key="backgroundColor" name="PrimaryBackground"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="VEb-j1-Hxb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VmX-Z4-MC7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="948" y="1624"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="oNr-Ea-fVP">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eTt-ZN-cK4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Y5r-Dh-mHt">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="TabBarTint"/>
+                        <tabBarAppearance key="standardAppearance" backgroundEffect="systemUltraThinMaterialLight"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="hoA-PM-ezG" kind="relationship" relationship="viewControllers" id="czK-GG-Ik6"/>
+                        <segue destination="Qaz-xB-W6T" kind="relationship" relationship="viewControllers" id="zaK-lL-Ia8"/>
+                        <segue destination="NvZ-qc-bMg" kind="relationship" relationship="viewControllers" id="EdC-Z5-RdC"/>
+                        <segue destination="oXA-6h-TCr" kind="relationship" relationship="viewControllers" id="27p-ZG-ERA"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Frr-JM-MnJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="132" y="183"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cloud.bolt.rain" catalog="system" width="122" height="128"/>
+        <image name="house.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <image name="star.circle" catalog="system" width="128" height="121"/>
+        <namedColor name="PrimaryBackground">
+            <color red="0.94901960784313721" green="0.96470588235294119" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TabBarTint">
+            <color red="0.38400000333786011" green="0.20399999618530273" blue="0.83499997854232788" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+    </resources>
 </document>
