--- a/RobertsDVTWeatherTakeHome/Base.lproj/Main.storyboard
+++ b/RobertsDVTWeatherTakeHome/Base.lproj/Main.storyboard
@@ -15,14 +15,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GOh-5Q-skT">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="bottomRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background01" translatesAutoresizingMaskIntoConstraints="NO" id="hy2-9u-ekA">
+                                        <rect key="frame" x="0.0" y="-140" width="414" height="464.5"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7HT-K8-5fV">
+                                        <rect key="frame" x="16" y="20" width="382" height="350"/>
+                                        <subviews>
+                                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b0f-4N-fAM">
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="350"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RVW-6O-jeO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="382" height="350"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Illustration 2" translatesAutoresizingMaskIntoConstraints="NO" id="xdX-VT-LgD">
+                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="217"/>
+                                                        </imageView>
+                                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TXn-ap-6jk">
+                                                            <rect key="frame" x="0.0" y="217" width="382" height="133"/>
+                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="3aT-Zy-280">
+                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="133"/>
+                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4C-5g-Zzu">
+                                                                        <rect key="frame" x="20" y="8" width="342" height="34"/>
+                                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather at your fingertips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIn-vp-gsW">
+                                                                        <rect key="frame" x="20" y="50" width="342" height="16"/>
+                                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In your location and more!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PLG-g8-e0y">
+                                                                        <rect key="frame" x="20" y="74" width="342" height="16"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="WIn-vp-gsW" firstAttribute="leading" secondItem="3aT-Zy-280" secondAttribute="leading" constant="20" id="5Hy-Od-tLJ"/>
+                                                                    <constraint firstItem="C4C-5g-Zzu" firstAttribute="leading" secondItem="3aT-Zy-280" secondAttribute="leading" constant="20" id="5zL-mA-zrJ"/>
+                                                                    <constraint firstItem="C4C-5g-Zzu" firstAttribute="top" secondItem="3aT-Zy-280" secondAttribute="top" constant="8" id="ASp-uN-amd"/>
+                                                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="PLG-g8-e0y" secondAttribute="bottom" constant="16" id="DoY-I1-Wvz"/>
+                                                                    <constraint firstItem="PLG-g8-e0y" firstAttribute="top" secondItem="WIn-vp-gsW" secondAttribute="bottom" constant="8" id="NBU-Xf-MF5"/>
+                                                                    <constraint firstItem="PLG-g8-e0y" firstAttribute="leading" secondItem="3aT-Zy-280" secondAttribute="leading" constant="20" id="YuX-3V-TSW"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="WIn-vp-gsW" secondAttribute="trailing" constant="20" id="dTu-3o-AVV"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="C4C-5g-Zzu" secondAttribute="trailing" constant="20" id="hsu-PH-Grr"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="PLG-g8-e0y" secondAttribute="trailing" constant="20" id="kcv-7z-Pp0"/>
+                                                                    <constraint firstItem="WIn-vp-gsW" firstAttribute="top" secondItem="C4C-5g-Zzu" secondAttribute="bottom" constant="8" id="zVS-eT-k6l"/>
+                                                                </constraints>
+                                                            </view>
+                                                            <vibrancyEffect>
+                                                                <blurEffect style="regular"/>
+                                                            </vibrancyEffect>
+                                                        </visualEffectView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="TXn-ap-6jk" secondAttribute="trailing" id="3zk-I2-gMK"/>
+                                                        <constraint firstAttribute="bottom" secondItem="TXn-ap-6jk" secondAttribute="bottom" id="G4j-x8-pGU"/>
+                                                        <constraint firstItem="xdX-VT-LgD" firstAttribute="top" secondItem="RVW-6O-jeO" secondAttribute="top" id="GL8-sf-2bo"/>
+                                                        <constraint firstItem="TXn-ap-6jk" firstAttribute="leading" secondItem="RVW-6O-jeO" secondAttribute="leading" id="LoY-72-996"/>
+                                                        <constraint firstAttribute="trailing" secondItem="xdX-VT-LgD" secondAttribute="trailing" id="T2q-bx-mMK"/>
+                                                        <constraint firstItem="TXn-ap-6jk" firstAttribute="top" secondItem="xdX-VT-LgD" secondAttribute="bottom" id="cKo-Br-ABY"/>
+                                                        <constraint firstItem="xdX-VT-LgD" firstAttribute="leading" secondItem="RVW-6O-jeO" secondAttribute="leading" id="gYx-K4-YsH"/>
+                                                    </constraints>
+                                                </view>
+                                                <blurEffect style="regular"/>
+                                            </visualEffectView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="BlurBackground"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="350" id="Wkm-jI-zYL"/>
+                                            <constraint firstAttribute="bottom" secondItem="b0f-4N-fAM" secondAttribute="bottom" id="ZAG-CX-qZG"/>
+                                            <constraint firstItem="b0f-4N-fAM" firstAttribute="leading" secondItem="7HT-K8-5fV" secondAttribute="leading" id="ggN-wd-0NZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="b0f-4N-fAM" secondAttribute="trailing" id="r16-y5-8Ap"/>
+                                            <constraint firstItem="b0f-4N-fAM" firstAttribute="top" secondItem="7HT-K8-5fV" secondAttribute="top" id="vjA-bC-aFY"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="hy2-9u-ekA" firstAttribute="trailing" secondItem="XAb-nA-Sfn" secondAttribute="trailing" id="Cpv-QY-No3"/>
+                                    <constraint firstItem="7HT-K8-5fV" firstAttribute="top" secondItem="wnZ-IX-8aH" secondAttribute="top" constant="20" id="Icb-VO-Woe"/>
+                                    <constraint firstItem="hy2-9u-ekA" firstAttribute="leading" secondItem="XAb-nA-Sfn" secondAttribute="leading" id="JX0-gP-Vzi"/>
+                                    <constraint firstItem="7HT-K8-5fV" firstAttribute="leading" secondItem="XAb-nA-Sfn" secondAttribute="leading" constant="16" id="P7p-dJ-Tda"/>
+                                    <constraint firstItem="XAb-nA-Sfn" firstAttribute="trailing" secondItem="7HT-K8-5fV" secondAttribute="trailing" constant="16" id="Vhu-cp-R6C"/>
+                                    <constraint firstItem="hy2-9u-ekA" firstAttribute="top" secondItem="XAb-nA-Sfn" secondAttribute="top" id="pa0-3u-dEX"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="wnZ-IX-8aH"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="XAb-nA-Sfn"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="PrimaryBackground"/>
+                        <constraints>
+                            <constraint firstItem="GOh-5Q-skT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1i7-Gg-lm1"/>
+                            <constraint firstItem="GOh-5Q-skT" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="9IV-zo-Dra"/>
+                            <constraint firstItem="GOh-5Q-skT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="LQ1-Jw-CMe"/>
+                            <constraint firstItem="GOh-5Q-skT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="M7S-nM-WIF"/>
+                            <constraint firstAttribute="bottom" secondItem="GOh-5Q-skT" secondAttribute="bottom" id="egf-Ww-gtV"/>
+                            <constraint firstItem="GOh-5Q-skT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="lQd-mJ-q1b"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Bob's Weather Central" id="cq6-KR-Row"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1858" y="-527"/>
+            <point key="canvasLocation" x="1857.9710144927537" y="-527.00892857142856"/>
         </scene>
         <!--Home-->
         <scene sceneID="7ys-PV-U07">
@@ -116,10 +221,15 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Background01" width="330" height="464.5"/>
+        <image name="Illustration 2" width="310" height="217"/>
         <image name="cloud.bolt.rain" catalog="system" width="122" height="128"/>
         <image name="house.circle.fill" catalog="system" width="128" height="121"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="star.circle" catalog="system" width="128" height="121"/>
+        <namedColor name="BlurBackground">
+            <color red="1" green="1" blue="1" alpha="0.40000000596046448" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="PrimaryBackground">
             <color red="0.94901960784313721" green="0.96470588235294119" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
