--- a/RobertsDVTWeatherTakeHome/Base.lproj/Main.storyboard
+++ b/RobertsDVTWeatherTakeHome/Base.lproj/Main.storyboard
@@ -31,28 +31,28 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="382" height="350"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Illustration 2" translatesAutoresizingMaskIntoConstraints="NO" id="xdX-VT-LgD">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Illustration 2" translatesAutoresizingMaskIntoConstraints="NO" id="xdX-VT-LgD">
                                                             <rect key="frame" x="0.0" y="0.0" width="382" height="217"/>
                                                         </imageView>
-                                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TXn-ap-6jk">
+                                                        <visualEffectView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TXn-ap-6jk">
                                                             <rect key="frame" x="0.0" y="217" width="382" height="133"/>
-                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="3aT-Zy-280">
+                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="3aT-Zy-280">
                                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="133"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4C-5g-Zzu">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Weather App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4C-5g-Zzu">
                                                                         <rect key="frame" x="20" y="8" width="342" height="34"/>
                                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather at your fingertips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIn-vp-gsW">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Weather at your fingertips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIn-vp-gsW">
                                                                         <rect key="frame" x="20" y="50" width="342" height="16"/>
                                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In your location and more!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PLG-g8-e0y">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="In your location and more!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PLG-g8-e0y">
                                                                         <rect key="frame" x="20" y="74" width="342" height="16"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                         <nil key="textColor"/>
@@ -63,7 +63,7 @@
                                                                     <constraint firstItem="WIn-vp-gsW" firstAttribute="leading" secondItem="3aT-Zy-280" secondAttribute="leading" constant="20" id="5Hy-Od-tLJ"/>
                                                                     <constraint firstItem="C4C-5g-Zzu" firstAttribute="leading" secondItem="3aT-Zy-280" secondAttribute="leading" constant="20" id="5zL-mA-zrJ"/>
                                                                     <constraint firstItem="C4C-5g-Zzu" firstAttribute="top" secondItem="3aT-Zy-280" secondAttribute="top" constant="8" id="ASp-uN-amd"/>
-                                                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="PLG-g8-e0y" secondAttribute="bottom" constant="16" id="DoY-I1-Wvz"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="PLG-g8-e0y" secondAttribute="bottom" constant="40" id="DoY-I1-Wvz"/>
                                                                     <constraint firstItem="PLG-g8-e0y" firstAttribute="top" secondItem="WIn-vp-gsW" secondAttribute="bottom" constant="8" id="NBU-Xf-MF5"/>
                                                                     <constraint firstItem="PLG-g8-e0y" firstAttribute="leading" secondItem="3aT-Zy-280" secondAttribute="leading" constant="20" id="YuX-3V-TSW"/>
                                                                     <constraint firstAttribute="trailing" secondItem="WIn-vp-gsW" secondAttribute="trailing" constant="20" id="dTu-3o-AVV"/>
@@ -97,7 +97,8 @@
                                         </subviews>
                                         <color key="backgroundColor" name="BlurBackground"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="350" id="Wkm-jI-zYL"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="500" id="6an-Yu-hot"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="350" id="Wkm-jI-zYL"/>
                                             <constraint firstAttribute="bottom" secondItem="b0f-4N-fAM" secondAttribute="bottom" id="ZAG-CX-qZG"/>
                                             <constraint firstItem="b0f-4N-fAM" firstAttribute="leading" secondItem="7HT-K8-5fV" secondAttribute="leading" id="ggN-wd-0NZ"/>
                                             <constraint firstAttribute="trailing" secondItem="b0f-4N-fAM" secondAttribute="trailing" id="r16-y5-8Ap"/>
@@ -130,10 +131,12 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="hy2-9u-ekA" firstAttribute="trailing" secondItem="XAb-nA-Sfn" secondAttribute="trailing" id="Cpv-QY-No3"/>
+                                    <constraint firstItem="7HT-K8-5fV" firstAttribute="centerX" secondItem="GOh-5Q-skT" secondAttribute="centerX" id="Ged-hS-vRZ"/>
                                     <constraint firstItem="7HT-K8-5fV" firstAttribute="top" secondItem="wnZ-IX-8aH" secondAttribute="top" constant="20" id="Icb-VO-Woe"/>
                                     <constraint firstItem="hy2-9u-ekA" firstAttribute="leading" secondItem="XAb-nA-Sfn" secondAttribute="leading" id="JX0-gP-Vzi"/>
-                                    <constraint firstItem="7HT-K8-5fV" firstAttribute="leading" secondItem="XAb-nA-Sfn" secondAttribute="leading" constant="16" id="P7p-dJ-Tda"/>
-                                    <constraint firstItem="XAb-nA-Sfn" firstAttribute="trailing" secondItem="7HT-K8-5fV" secondAttribute="trailing" constant="16" id="Vhu-cp-R6C"/>
+                                    <constraint firstItem="7HT-K8-5fV" firstAttribute="leading" secondItem="XAb-nA-Sfn" secondAttribute="leading" priority="750" constant="16" id="P7p-dJ-Tda"/>
+                                    <constraint firstItem="XAb-nA-Sfn" firstAttribute="trailing" secondItem="7HT-K8-5fV" secondAttribute="trailing" priority="750" constant="16" id="Vhu-cp-R6C"/>
+                                    <constraint firstAttribute="bottom" secondItem="7HT-K8-5fV" secondAttribute="bottom" constant="40" id="pGB-B6-7dS"/>
                                     <constraint firstItem="hy2-9u-ekA" firstAttribute="top" secondItem="XAb-nA-Sfn" secondAttribute="top" id="pa0-3u-dEX"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="wnZ-IX-8aH"/>
